# local_bids_validation

./: .gitignore  .openneuro  LICENSE  README.md  ds004564-1.0.1.sh  pyproject.toml  requirements.txt
.github/workflows/: collect_valid_bids_dataset.yaml
local_bids_validation/: local.py
tests/: test_local.py
tests/testdata/: .bidsignore
